# wav2vec-emotion-geometry

./: .gitignore  README.md  cohens_d_results.csv  pyproject.toml  requirements.txt
0_embeddings/: baseline_model_analysis.py  extract_embeddings.py
0_embeddings/output/: head_weights.txt  model_architecture.txt  model_diagram.mmd  model_report.md  state_dict_summary.txt
1_classical_features/: egemaps_feature_extraction.py  eta_squared_anova.py  feature_activation_scatter_tsne.py  pairwise_emotion_cohensd.py
2_geometric_diagnostics/0_linear_probes/: train_probes.py
2_geometric_diagnostics/1_subspace_entanglement/: subspace_angle.py
2_geometric_diagnostics/2_pca_procrustes/: pca_emotional_directions.py  procrustes_alignment.py  procrustes_heldout_validation.py
2_geometric_diagnostics/3_ablation/: ablation_evaluation.py
3_local_evaluation/: tsne_knn_eval.py
4_model_retraining/: head_retrain_language.ipynb  retrain_lib.py  save_best_models.ipynb
4_model_retraining/saved_models/: results_all.json
5_evaluation/: esd_baseline_evaluation.py  retrained_evaluation.py
5_evaluation/output/: aesdd_results.json  cafe_results.json  emodb_results.json  esd_confusion_matrix.csv
common/: __init__.py  embeddings.py  geometry.py  io.py  labels.py  paths.py  probes.py  retrained_model.py  viz.py
data/AESDD/: AESDD_GT.csv
data/CaFE/: CaFE_GT.csv
data/EMODB/: EMODB_GT.csv
data/ESD/: ESD_GT.csv
data/RAVDESS/: RAVDESS_GT.csv
xai_weights/ESD/: emotion_probe.json  emotion_probe.npz  gender_probe.json  gender_probe.npz  language_probe.json  language_probe.npz  (+2 more)
(+68 files in other folders)
